# dune-book

./: .clang-format  .gitignore  .gitpod.yml  CMakeLists.txt  EXAMPLELIST  Installation.md  README.md  config.h.cmake  dune-book.pc.in  dune.module  run.sh
.github/workflows/: book.yml  pages.yml  test_book.yml
cmake/modules/: CMakeLists.txt
doc/doxygen/: Doxylocal
dune/: CMakeLists.txt
dune-book/: _config.yml  config.h  notebooks.ipynb  pyproject.toml
dune/book/: CMakeLists.txt  book.hh
examples/: CMakeLists.txt  README.md  assembleElementStiffnessMatrix.hh  getting-started-poisson-fem.cc  getting-started-transport-fv.cc  grid-adaptivity-data-transfer.cc  grid-adaptivity.cc  hello-dune.cc  hello-gmsh.cc  l-shape.geo  recipe-integration.cc  recipe-iterate-over-grid.cc
examples/getting-started-poisson-fem/: CMakeLists.txt  assembleElementStiffnessMatrix.hh  assembleElementVolumeTerm.hh  assemblePoissonProblem.hh  getOccupationPattern.hh  getting-started-poisson-fem.cc
examples/getting-started-transport-fv/: CMakeLists.txt  evolve.hh  getting-started-transport-fv.cc
examples/gmsh/: CMakeLists.txt  hello-gmsh.cc  l-shape-gmsh.cc
examples/grid-adaptivity/: CMakeLists.txt  Sphere.hh  grid-adaptivity.cc
examples/grid-adaptivity-data-transfer/: CMakeLists.txt  Sphere.hh  grid-adaptivity-data-transfer.cc  interpolate.hh
examples/grid-distributed-poisson/: CMakeLists.txt  LBVertexDataHandle.hh  VertexDataUpdate.hh  assembleElementStiffnessMatrix.hh  assembleElementVolumeTerm.hh  assemblePoissonProblem.hh  getOccupationPattern.hh  grid-distributed-poisson.cc
examples/istl-distributed-poisson/: AdditiveScalarProduct.hh  CMakeLists.txt  JacobiPreconditioner.hh  LBVertexDataHandle.hh  VertexDataUpdate.hh  assembleElementStiffnessMatrix.hh  assembleElementVolumeTerm.hh  assemblePoissonProblem.hh  getOccupationPattern.hh  istl-distributed-poisson.cc
examples/istl-sequential-amg/: CMakeLists.txt
examples/recipes/: CMakeLists.txt  metadata.cc  recipe-integration.cc  recipe-iterate-over-grid.cc
src/: CMakeLists.txt  dune-book.cc
