add_subdirectory(recipes)
add_subdirectory(getting-started-poisson-fem)
add_subdirectory(getting-started-transport-fv)
add_subdirectory(grid-adaptivity)
add_subdirectory(grid-adaptivity-data-transfer)
add_subdirectory(grid-distributed-poisson)
add_subdirectory(istl-distributed-poisson)
# add_subdirectory(istl-sequential-amg)
add_subdirectory(gmsh)